[package]
name = "geoint_76"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webbrowser = "0.8.11"
regex="*"
reqwest="*"
image="*"
async-trait = "0.1.56"
base64 = "0.21.0"
cookie = { version = "0.16.0", features = ["percent-encode"] }
fantoccini = { version = "0.20.0-rc.4", default-features = false }
futures = "0.3.21"
http = "0.2.8"
indexmap = "1.9.2"
log = "0.4.17"
parking_lot = "0.12.1"
paste = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_repr = "0.1.8"
stringmatch = "0.4.0"
thiserror = "1.0.31"
tokio = { version = "1.20", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }
url = "2.2.2"
thirtyfour = "0.31.0"
color-eyre = "0.6.2"

[dev-dependencies]
assert_matches = "1.5.0"
color-eyre = "0.6.2"
hyper = { version = "0.14", features = ["server", "tcp"] }
serial_test = "2.0.0"
